--- a/Architect/templates/article.html
+++ b/Architect/templates/article.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block windowtitle %}{{article.title}} - {{SITENAME}} {% endblock %}
+
 {% block content %}
 <article>
 	<h1>{{ article.title }}</h1>
