修改文章分类和分类的slug替换

--- a/Architect/templates/article.html
+++ b/Architect/templates/article.html
@@ -8,7 +8,7 @@
 	<div class="article_info">
 		<h6>
 			<span>
-				<a href="{{ SITEURL }}/author/{{article.author|lower|replace(' ', '-')}}.html">{{ article.author }}</a>
+				<a href="http://weibo.com/inpool" target="_blank">{{ article.author }}</a>
 			</span>
 			<span>
 				{{ article.locale_date }}
@@ -31,7 +31,7 @@
 	<div class="article_info">
 		<h6>
 			<span>
-				<a href="{{SITEURL}}/author/{{article.author|lower|replace(' ', '-')}}.html">{{ article.author }}</a>
+				<a href="http://weibo.com/inpool" target="_blank">{{ article.author }}</a>
 			</span>
 			<span>
 				{{ article.locale_date }}
