修正article.html模板中多说文章ID的指定

--- a/Architect/templates/article.html
+++ b/Architect/templates/article.html
@@ -51,7 +51,7 @@
 </article>
 {% if DUOSHUO_ID %}
 <!-- duoshuo commet start -->
-<div class="ds-thread" data-thread-key="/{{article.category.name}}/{{article.slug}}" data-title="{{article.title}}" data-url="{{SITEURL}}/{{article.url}}"></div>
+<div class="ds-thread" data-thread-key="/{{article.category.slug}}/{{article.slug}}" data-title="{{article.title}}" data-url="{{SITEURL}}/{{article.url}}"></div>
 <script type="text/javascript">
 var duoshuoQuery = {short_name:"{{DUOSHUO_ID}}"};
 (function() {
