--- a/Architect/static/css/stylesheet.css
+++ b/Architect/static/css/stylesheet.css
@@ -207,15 +207,17 @@ article p{
   text-indent: 2em;
 }
 article div.note{
-  margin: 0 5px;
   border: 1px #ccc solid;
-  padding: 10px 15px;
-  background: #7cf;
+  background: #9ef;
 }
 article p.admonition-title{
-  margin-top: 20px;
-  text-indent: 0;
-  font-weight: bold;
+    text-indent: 0;
+    padding: 5px 15px;
+    background: #7cf;
+    font-weight: bold;
+}
+article p.admonition-title ~ p{
+    padding: 0 20px;
 }
 article p.admonition-title:after{
   content: ':';
@@ -770,7 +772,6 @@ footer {
   margin: 20px auto;
   font-size: 13px;
   color: #aaa;
-  background: transparent url('../img/hr.png') 0 0 no-repeat;
 }
 
 footer a {
