--- a/Architect/templates/category.html
+++ b/Architect/templates/category.html
@@ -1,3 +1,5 @@
 {% extends "index.html" %}
 
-{% set pagetitle = 'Category: ' ~ category %}
+{% block pagetitle %}
+<span class="pagetitle">首页 &raquo; 分类 &raquo; {{category}}</span>
+{% endblock %}
