--- a/Architect/templates/index.html
+++ b/Architect/templates/index.html
@@ -5,27 +5,27 @@
 {% block content %}
 {# show summaries of the latest articles #}
 {% if articles %}
-{% for article in (articles_page.object_list if articles_page else articles) %}
+{% for loop_article in (articles_page.object_list if articles_page else articles) %}
 <article>
 	<h3>
-		{% if article.category %}
-			[<a href="{{ SITEURL }}/{{ article.category.url }}" class="category">{{ article.category}}</a>]
+		{% if loop_article.category and not category %}
+			[<a href="{{ SITEURL }}/{{ loop_article.category.url }}" class="category">{{ loop_article.category}}</a>]
 		{% endif %}
-		<a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a>
+		<a href="{{ SITEURL }}/{{ loop_article.url }}">{{ loop_article.title }}</a>
 	</h3>
 	<div class="article_info">
 		<h6>
-			<span>{{ article.locale_date }}</span>
-			{% if article.tags|count > 0 %}
-				<span>{% for tag in article.tags %}
-					<a href="{{ SITEURL }}/{{ tag.url }}" class="tag">{{ tag }}</a>
+			<span>{{ loop_article.locale_date }}</span>
+			{% if loop_article.tags|count > 0 %}
+				<span>{% for tg in loop_article.tags | reject('equalto', tag) %}
+					<a href="{{ SITEURL }}/{{ tg.url }}" class="tag">{{ tg }}</a>
 				{% endfor %}</span>
 			{% endif %}
 		</h6>
 	</div>
-	{{ article.content if FOUNDATION_FRONT_PAGE_FULL_ARTICLES else article.summary }}
+	{{ loop_article.content if FOUNDATION_FRONT_PAGE_FULL_ARTICLES else loop_article.summary }}
 	{% if not FOUNDATION_FRONT_PAGE_FULL_ARTICLES %}
-		<p class="continue"><a href="{{ SITEURL }}/{{ article.url }}">阅读全文 &raquo;</a></p>
+		<p class="continue"><a href="{{ SITEURL }}/{{ loop_article.url }}">阅读全文 &raquo;</a></p>
 	{% endif %}
 </article>
 {% endfor %}
