--- a/Architect/templates/tag.html
+++ b/Architect/templates/tag.html
@@ -1,3 +1,5 @@
 {% extends "index.html" %}
 
-{% set pagetitle = "Posts Tagged With '" ~ tag ~ "'" %}
+{% block pagetitle %}
+<span class="pagetitle">首页 &raquo; 标签 &raquo; {{tag}}</span>
+{% endblock %}
