--- a/Architect/static/css/stylesheet.css
+++ b/Architect/static/css/stylesheet.css
@@ -222,6 +222,9 @@ article p.admonition-title ~ p{
 article p.admonition-title:after{
   content: ':';
 }
+article li p{
+  text-indent: 0;
+}
 /* Embedded content
    ========================================================================== */
 
