Modify: 修改代码行号样式和注意文本样式，丰富reST01的草稿内容

--- a/Architect/static/css/stylesheet.css
+++ b/Architect/static/css/stylesheet.css
@@ -209,6 +209,7 @@ article p{
 article div.note{
   border: 1px #ccc solid;
   background: #9ef;
+  margin-bottom:5px;
 }
 article p.admonition-title{
     text-indent: 0;
