--- a/theme/css/pygment.css
+++ b/theme/css/pygment.css
@@ -63,3 +63,4 @@
 .highlight .vg { color: #bb60d5 } /* Name.Variable.Global */
 .highlight .vi { color: #bb60d5 } /* Name.Variable.Instance */
 .highlight .il { color: #208050 } /* Literal.Number.Integer.Long */
+.highlight .lineno {color: #888888; border-right:1px dashed #cccccc;margin-right:5px;}
